Updated questions about car

--- a/car_buying_project/index.html
+++ b/car_buying_project/index.html
@@ -52,7 +52,7 @@
 						<li>Price</li>
 						<li>Comforts and Conveniences (For example: GPS, bluetooth, remote entry, remote start, heated seats, etc)</li>
 						<li>Miles Per Gallon (MPG)</li>
-						<li>What attracted you to this car?</li>
+						<li>Why did you pick this car?</li>
 					</ul>
 			</ol>
 		<p>[ <a href="#top">Top of Page</a> ]</p>
