--- a/car_buying_project.html
+++ b/car_buying_project.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
 		<title>Car Buying Project</title>
 	</head>
-	<body style="font-family: Arial; line-height: 40px">
+	<body>
 		<h1 id="top">Car Buying Project</h1>
 			<ol>
 				<li><a href="#part1">Part 1: Data Entry and Formatting (40 points)</a></li>
