Added additional instructions to creating the workbook.

--- a/Projects/buying_a_computer_project.html
+++ b/Projects/buying_a_computer_project.html
@@ -35,6 +35,10 @@
 				<li>In cell A19, type: Accessories</li>
 				<li>In cell A21, type: Total Cost of Accessories</li>
 				<li>In cell A23, type: Total Cost of Computer</li>
+				<li>Merge and center cells A1:C1</li>
+				<li>Merge and center cells A14:C14</li>
+				<li>Merge and center cells A19:C19</li>
+				<li>Resize the columns so that in the information fits correctly.</li>
 				<li>Customize the look of the spreadsheet using cell styles. </li>
 				<li>Your finished spreadsheet should look simalar to the image below:</li>
 				<img src="buying_computer_sample.png">
