Added link to example.

--- a/Projects/buying_a_computer_project.html
+++ b/Projects/buying_a_computer_project.html
@@ -40,7 +40,7 @@
 				<li>Merge and center cells A19:C19</li>
 				<li>Resize the columns so that in the information fits correctly.</li>
 				<li>Customize the look of the spreadsheet using cell styles. </li>
-				<li>Your finished spreadsheet should look simalar to the image below:</li>
+				<li>Your finished spreadsheet should look simalar to <a href="https://yonkerspublicschools-my.sharepoint.com/personal/emurray_yonkerspublicschools_org/_layouts/15/guestaccess.aspx?guestaccesstoken=eFKzq%2Fnvhr6MpbawmYY0BIqTPBFxUEKaT3kXgsYKL4w%3D&docid=06b617801efe54a7e9ea43170d5cec8c1&rev=1">this workbook</a>.</li>
 				<img src="buying_computer_sample.png">
 			</ol>
 			<p>[ <a href="#top">Top of Page</a> ]</p>
