Updated resources link

--- a/Projects/buying_a_computer_project.html
+++ b/Projects/buying_a_computer_project.html
@@ -52,7 +52,7 @@
 				</ul>
 			<h2>Resources</h2>
 				<ul>
-					<li><a href="bestbuy.com">BestBuy.com</a></li>	
+					<li><a href="http://www.bestbuy.com/">BestBuy.com</a></li>	
 				</ul>
 				<p>[ <a href="#top">Top of Page</a> ]</p>
 		<h1 id="part3">Calculate the Cost</h1>
