--- a/Projects/designing_a_product_invoice.html
+++ b/Projects/designing_a_product_invoice.html
@@ -15,31 +15,31 @@
 		<h1 id="part1">Creating the Spreadsheet</h1>
 			<ol>
 				<li>Create a new Excel workbook.</li>
-				<li>Save the Excel workbook as <b>Designing a Product Invoice</b>.</li>
-				<li>Add a <b>header</b> with your name on the left, the date code in the center, and the page number code on the right.</li>
-				<li>Type <b>Invoice</b> in cell <b>A1</b>, and press <b>ENTER</b> twice.</li>
-				<li>Type <b>Remit To:</b> and press <b>TAB</b>.</li>
-				<li>Type <b>Shapeways Inc</b>, and press <b>ENTER</b>.</li>
-				<li>Type <b>565 Warburton Ave.</b>, and press <b>ENTER</b>.</li>
-				<li>Type <b>Yonkers, NY 10701</b>, and press <b>ENTER</b>.</li>
-				<li>Type <b>914-376-8425</b>, and press <b>ENTER</b>.</li>
-				<li>Click cell <b>A8</b>, and type the following three enteries, pressing <b>ENTER</b> after each:</li>
-					<p><b>Date:</b></p>
-					<p><b>Number:</b></p>
-					<p><b>Due Date:</b></p>
-				<li>Press <b>ENTER</b> again to select cell <b>A12</b>, and make the following two entries, pressing <b>ENTER</b> after each:</li>
-					<p><b>Client ID:</b></p>
-					<p><b>Client:</b></p>
-				<li>Click cell <b>A17</b>, and type the following four enteries, pressing <b>TAB</b> after each:</li>
-					<p><b>Quanity</b></p>
-					<p><b>Description</b></p>
-					<p><b>Unit Price</b></p>
-					<p><b>Amount</b></p>
-				<li>Type <b>Total</b> in cell <b>C21</b>.</li>
-				<li>Select cells <b>C28:D21</b>.</li>
-				<li>Apply the <b>Currency number format</b> to the cells.</li>
-				<li><b>Merge and center</b> cells <b>A1:D1</b>.</li>
-				<li>Apply a cell style to cells <b>A1:D1, A2, A8:A10, A12:A13, and A17:D17</b>.</li>
+				<li>Save the Excel workbook as <b class="excel">Designing a Product Invoice</b>.</li>
+				<li>Add a <b class="excel">header</b> with your name on the left, the date code in the center, and the page number code on the right.</li>
+				<li>Type <b class="input">Invoice</b> in cell <b class="cell">A1</b>, and press <b class="keyboard">ENTER</b> twice.</li>
+				<li>Type <b class="input">Remit To:</b> and press <b class="keyboard">TAB</b>.</li>
+				<li>Type <b class="input">Shapeways Inc</b>, and press <b class="keyboard">ENTER</b>.</li>
+				<li>Type <b class="input">565 Warburton Ave.</b>, and press <b class="keyboard">ENTER</b>.</li>
+				<li>Type <b class="input">Yonkers, NY 10701</b>, and press <b class="keyboard">ENTER</b>.</li>
+				<li>Type <b class="input">914-376-8425</b>, and press <b class="keyboard">ENTER</b>.</li>
+				<li>Click cell <b class="cell">A8</b>, and type the following three enteries, pressing <b class="keyboard">ENTER</b> after each:</li>
+					<p><b class="input">Date:</b></p>
+					<p><b class="input">Number:</b></p>
+					<p><b class="input">Due Date:</b></p>
+				<li>Press <b class="keyboard">ENTER</b> again to select cell <b class="cell">A12</b>, and make the following two entries, pressing <b class="keyboard">ENTER</b> after each:</li>
+					<p><b class="input">Client ID:</b></p>
+					<p><b class="input">Client:</b></p>
+				<li>Click cell <b class="cell">A17</b>, and type the following four enteries, pressing <b class="keyboard">TAB</b> after each:</li>
+					<p><b class="input">Quanity</b></p>
+					<p><b class="input">Description</b></p>
+					<p><b class="input">Unit Price</b></p>
+					<p><b class="input">Amount</b></p>
+				<li>Type <b class="input">Total</b> in cell <b class="cell">C21</b>.</li>
+				<li>Select cells <b class="cell">C28:D21</b>.</li>
+				<li>Apply the <b class="excel">Currency number format</b> to the cells.</li>
+				<li><b class="excel">Merge and center</b> cells <b class="cell">A1:D1</b>.</li>
+				<li>Apply a cell style to cells <b class="cell">A1:D1, A2, A8:A10, A12:A13, and A17:D17</b>.</li>
 				<li>Save your Workbook</li>
 			</ol>
 
@@ -47,10 +47,15 @@
 
 		<h1 id="part2">Enter Products in Spreadhsheet</h1>
 			<ol>
+				<li>Type the date in cell <b class="cell">B8</b>.</li>
+				<li>Type <b class="input">00567</b> in cell <b class="cell">B9</b>.</li>
+				<li>Type <b class="input">11987</b> in cell <b class="cell">B12</b>.</li>
+				<li>Type <b class="input">Shape Shop</b> in cell <b class="cell">B13</b>.</li>
+				<li>In cell <b class="cell">A13</b>, change the alignment to <b class="excel">Align Right</b>.</li>
 				<li>In Description column of your spreadsheet enter three products that you created in Makers Empire.  For example, Cell Phone Holder, Hair Clip, Pet Collar.</li>
-				<li>Type <b>32</b> in cell <b>A18</b>.</li>
-				<li>Type <b>50</b> in cell <b>A19</b>.</li>
-				<li>TYpe <b>25</b> in cell <b>A20</b>.</li>
+				<li>Type <b class="input">32</b> in cell <b class="cell">A18</b>.</li>
+				<li>Type <b class="input">50</b> in cell <b class="cell">A19</b>.</li>
+				<li>TYpe <b class="input">25</b> in cell <b class="cell">A20</b>.</li>
 				<li>In the Unit Price column create a price for each of your products.</li>
 			</ol>
 			
@@ -58,9 +63,9 @@
 
 		<h1 id="part3">Enter Formulas and Functions</h1>
 			<ol>
-				<li>In cell <b>D18</b> create a formula to muliply cell <b>A18</b> and <b>C18</b>.
-				<li>Use the fill handle to enter the formula in cell <b>D19</b> and <b>D20</b>.</l1>
-				<li>Use the SUM function to find the total of cells <b>D18:D20</b>.</li>
+				<li>In cell <b class="cell">D18</b> create a formula to muliply cell <b class="cell">A18</b> and <b class="cell">C18</b>.
+				<li>Use the fill handle to enter the formula in cell <b class="cell">D19</b> and <b class="cell">D20</b>.</l1>
+				<li>Use the SUM function to find the total of cells <b class="cell">D18:D20</b>.</li>
 			</ol>
 
 		<p><a href="#top">Back to Top</a></p>
