Corrected spelling in the instructions.

--- a/Projects/designing_a_product_invoice.html
+++ b/Projects/designing_a_product_invoice.html
@@ -63,7 +63,7 @@
 
 		<h1 id="part3">Enter Formulas and Functions</h1>
 			<ol>
-				<li>In cell <b class="cell">D18</b> create a formula to muliply cell <b class="cell">A18</b> and <b class="cell">C18</b>.
+				<li>In cell <b class="cell">D18</b> create a formula to multiply cell <b class="cell">A18</b> and <b class="cell">C18</b>.
 				<li>Use the fill handle to enter the formula in cell <b class="cell">D19</b> and <b class="cell">D20</b>.</l1>
 				<li>Use the SUM function to find the total of cells <b class="cell">D18:D20</b>.</li>
 			</ol>
