--- a/Projects/designing_a_product_invoice.html
+++ b/Projects/designing_a_product_invoice.html
@@ -55,7 +55,7 @@
 				<li>In Description column of your spreadsheet enter three products that you created in Makers Empire.  For example, Cell Phone Holder, Hair Clip, Pet Collar.</li>
 				<li>Type <b class="input">32</b> in cell <b class="cell">A18</b>.</li>
 				<li>Type <b class="input">50</b> in cell <b class="cell">A19</b>.</li>
-				<li>TYpe <b class="input">25</b> in cell <b class="cell">A20</b>.</li>
+				<li>Type <b class="input">25</b> in cell <b class="cell">A20</b>.</li>
 				<li>In the Unit Price column create a price for each of your products.</li>
 			</ol>
 			
