--- a/Projects/comparing_cell_phone_plans.html
+++ b/Projects/comparing_cell_phone_plans.html
@@ -9,37 +9,44 @@
 			<ol>
 				<li><a href="#part1">Creating the Spreadsheet</a></li>
 				<li><a href="#part2">Researching Cell Phone Plans</a></li>
-				<li><a href="#part3">Adding a Chart</a></li>
+				<li><a href="part3">Calculate the Cost Per GB</a></li>
+				<li><a href="#part4">Adding a Chart</a></li>
 			</ol>
 		<h2 id="part1">Creating the Spreadsheet</h2>
 			<ol>
 				<li>Create a new spreadsheet in Microsoft Excel.</li>
 				<li>Save the spreadsheet as Comparing Cell Phone Plans</li>
-				<li>In cell A1, type: Cricket Wireless PrePaid Cell Phone Plans.</li>
-				<li>Click cell A2 and type the following enteries pressing TAB after each:</li>
-				Data
-				Cost
-				PrePay Cost
-				<li>Click cell A3 and type the following enteries pressing ENTER after each:</li>
-				1GB
-				2.5GB
-				8GB
-				10GB
-				Unlimited
-				<li>Merge and center cells A1:C1.</li>
-				<li>Select cells A2:C7 and format it as a table.  Select any style you like.</li>
+				<li>In cell <B class="cell">A1</B>, type: <b class="inpu">Cricket Wireless PrePaid Cell Phone Plans</b>.</li>
+				<li>Click cell <b class="cell">A2</b> and type the following enteries pressing <b class="keyboard">TAB</b> after each:</li>
+				<p><b class="input">Data</b></p>
+				<p><b class="input">Cost</b></p>
+				<p><b class="input">PrePay Cost</b></p>
+				<p><b class="input">Cost Per GB</b></p>
+				<li>Click cell <b class="cell">A3 and type the following enteries pressing <b class="keyboard">ENTER</b> after each:</li>
+				<p><b class="input">1GB</b></p>
+				<p><b class="input">2.5GB</b></p>
+				<p><b class="input">8GB</b></p>
+				<p><b class="input">10GB</b></p>
+				<p><b class="input">Unlimited</b></p>
+				<li><b class="excel">Merge and center</b> cells <b class="cell">A1:D1</b>.</li>
+				<li>Select cells <b class="cell">A2:D7</b> and format it as a table.  Select any style you like.</li>
 				<li>Change the theme of the worksheet.</li>
 			</ol>
 		<h1 id="part2">Researching Cell Phone Plans</h1>
 			<ol>
 				<li>Fill in the chart using the information on the Cricket Wireless website by <a href="https://www.cricketwireless.com/cell-phone-plans">clicking here</a>.
 			</ol>
-		<h1 id="part3">Adding a Chart</h1>
+		<h1 id="part4">Calculating the Cost Per GB</h1>
 			<ol>
-				<li>Select cells A2:C7 and add a column chart.</li>
-				<li>Add a title to the chart and type: Cricket Wireless PrePaid Cell Phone Plans</li>
-				<li>Add a label to the vertical axis called: Cost.</li>
-				<li>Add a lable to the horizontal axis called: Data Plans</li>
+				<li>Starting in cell <b class="cell">D3, create a formula to determine how much you pay per GB for each plan.</li>
+				<li>Create similar formulas in cells <b class="cell">D4, D5, and D6</b>.</li>
+			</ol>
+		<h1 id="part4">Adding a Chart</h1>
+			<ol>
+				<li>Select cells <b class="cell">A2:D7</b> and add a column chart.</li>
+				<li>Add a title to the chart and type: <b class="input">Cricket Wireless PrePaid Cell Phone Plans</b></li>
+				<li>Add a label to the vertical axis called: <b class="input">Cost</b>.</li>
+				<li>Add a lable to the horizontal axis called: <b class="input">Data Plans</b></li>
 			</ol>
 	</body>
 </html>
