Formatting changes to instructions.

--- a/Projects/comparing_cell_phone_plans.html
+++ b/Projects/comparing_cell_phone_plans.html
@@ -15,14 +15,14 @@
 		<h2 id="part1">Creating the Spreadsheet</h2>
 			<ol>
 				<li>Create a new spreadsheet in Microsoft Excel.</li>
-				<li>Save the spreadsheet as Comparing Cell Phone Plans</li>
-				<li>In cell <B class="cell">A1</B>, type: <b class="inpu">Cricket Wireless PrePaid Cell Phone Plans</b>.</li>
+				<li>Save the spreadsheet as <b>Comparing Cell Phone Plans</b></li>
+				<li>In cell <B class="cell">A1</B>, type: <b class="input">Cricket Wireless PrePaid Cell Phone Plans</b>.</li>
 				<li>Click cell <b class="cell">A2</b> and type the following enteries pressing <b class="keyboard">TAB</b> after each:</li>
 				<p><b class="input">Data</b></p>
 				<p><b class="input">Cost</b></p>
 				<p><b class="input">PrePay Cost</b></p>
 				<p><b class="input">Cost Per GB</b></p>
-				<li>Click cell <b class="cell">A3 and type the following enteries pressing <b class="keyboard">ENTER</b> after each:</li>
+				<li>Click cell <b class="cell">A3</b> and type the following enteries pressing <b class="keyboard">ENTER</b> after each:</li>
 				<p><b class="input">1GB</b></p>
 				<p><b class="input">2.5GB</b></p>
 				<p><b class="input">8GB</b></p>
@@ -34,11 +34,11 @@
 			</ol>
 		<h1 id="part2">Researching Cell Phone Plans</h1>
 			<ol>
-				<li>Fill in the chart using the information on the Cricket Wireless website by <a href="https://www.cricketwireless.com/cell-phone-plans">clicking here</a>.
+				<li>Fill in the chart using the information on the Cricket Wireless website by <a href="https://www.cricketwireless.com/cell-phone-plans" target="_blank">clicking here</a>.
 			</ol>
 		<h1 id="part4">Calculating the Cost Per GB</h1>
 			<ol>
-				<li>Starting in cell <b class="cell">D3, create a formula to determine how much you pay per GB for each plan.</li>
+				<li>Starting in cell <b class="cell">D3</b>, create a formula to determine how much you pay per GB for each plan.</li>
 				<li>Create similar formulas in cells <b class="cell">D4, D5, and D6</b>.</li>
 			</ol>
 		<h1 id="part4">Adding a Chart</h1>
