--- a/Projects/data_usage_calculator.html
+++ b/Projects/data_usage_calculator.html
@@ -27,9 +27,9 @@
 				<p><b class="input">=B6*0.0003584</b></p>
 				<p><b class="input">=B7*0.015</b></p>
 				<p><b class="input">=B8*0.004</b></p>
-				<li>In cell C9, find the sum of cells <b class="cell">C3:C8</b>.</li>
-				<li>Merge and center cells <b class="cell">A1:C1</b>.</li>
-				<li>Merge and center cells <b class="cell">A9:B9</b>.</li>
+				<li>In cell <b class="cell">C9</b>, find the sum of cells <b class="cell">C3:C8</b>.</li>
+				<li><b class="excel">Merge and center</b> cells <b class="cell">A1:C1</b>.</li>
+				<li><b class="excel">Merge and center</b> cells <b class="cell">A9:B9</b>.</li>
 				<li>Change the alignment of cell <b class="cell">A9</b> to right align.</li>
 				<li>Apply cell formatting to cells <b class="cell">A1:C1, A2:C2, A3:A9, and A9:B9</b>.</li>
 				<li>Change the theme of your spreadsheet.</l1>
