--- a/Projects/data_usage_calculator.html
+++ b/Projects/data_usage_calculator.html
@@ -7,6 +7,7 @@
 	<body>
 		<h1>Data Usage Calculator</h1>
 			<ol>
+				<li>Create a new spreadsheet in the Comparing Cell Phone Plans workbook</li>
 				<li>In cell <b class="cell">A1</b> type: <b class="input">Data Usage Calculator</b></li>
 				<li>Click cell <b class="cell">A2</b> and type the following enteries pressing <b class="keyboard">TAB</b> after each:</li>
 				<p><b class="input">Type of Data</b></p>
