--- a/Projects/comparing_cell_phone_plans.html
+++ b/Projects/comparing_cell_phone_plans.html
@@ -20,7 +20,7 @@
 				<li>Click cell <b class="cell">A2</b> and type the following enteries pressing <b class="keyboard">TAB</b> after each:</li>
 				<p><b class="input">Data</b></p>
 				<p><b class="input">Cost</b></p>
-				<p><b class="input">PrePay Cost</b></p>
+				<p><b class="input"> Auto Pay Cost</b></p>
 				<p><b class="input">Cost Per GB</b></p>
 				<li>Click cell <b class="cell">A3</b> and type the following enteries pressing <b class="keyboard">ENTER</b> after each:</li>
 				<p><b class="input">1GB</b></p>
@@ -38,7 +38,7 @@
 			</ol>
 		<h1 id="part4">Calculating the Cost Per GB</h1>
 			<ol>
-				<li>Starting in cell <b class="cell">D3</b>, create a formula to determine how much you pay per GB for each plan.</li>
+				<li>Starting in cell <b class="cell">D3</b>, create a formula to determine how much you pay per GB for each plan.  Use the Auto Pay cost to calculate how much you will pay per GB.</li>
 				<li>Create similar formulas in cells <b class="cell">D4, D5, and D6</b>.</li>
 			</ol>
 		<h1 id="part4">Adding a Chart</h1>
