Changed instructions for calcuating cost per GB

--- a/Projects/comparing_cell_phone_plans.html
+++ b/Projects/comparing_cell_phone_plans.html
@@ -38,7 +38,7 @@
 			</ol>
 		<h1 id="part4">Calculating the Cost Per GB</h1>
 			<ol>
-				<li>Starting in cell <b class="cell">D3</b>, create a formula to determine how much you pay per GB for each plan.  Use the Auto Pay cost to calculate how much you will pay per GB.</li>
+				<li>Starting in cell <b class="cell">D3</b>, create a formula to determine how much you pay per GB for the Auto Pay plan.</li>
 				<li>Create similar formulas in cells <b class="cell">D4, D5, and D6</b>.</li>
 			</ol>
 		<h1 id="part4">Adding a Chart</h1>
