--- a/Projects/data_usage_calculator.html
+++ b/Projects/data_usage_calculator.html
@@ -32,7 +32,7 @@
 				<li><b class="excel">Merge and center</b> cells <b class="cell">A1:C1</b>.</li>
 				<li><b class="excel">Merge and center</b> cells <b class="cell">A9:B9</b>.</li>
 				<li>Change the alignment of cell <b class="cell">A9</b> to right align.</li>
-				<li>Apply cell formatting to cells <b class="cell">A1:C1, A2:C2, A3:A9, and A9:B9</b>.</li>
+				<li>Apply cell styles to cells <b class="cell">A1:C1, A2:C2, A3:A9, and A9:B9</b>.</li>
 				<li>Change the theme of your spreadsheet.</l1>
 				<li>In the appropriate cell in column B respond to the questions in each row to calculate your approximate data usage.</li>
 			</ol>
