--- a/Projects/personal_budget_project.html
+++ b/Projects/personal_budget_project.html
@@ -45,9 +45,15 @@
 					<p><b class="input">80</b></p>
 					<p><b class="input">75</b></p>
 					<p><b class="input">150</b></p>
+				<li>Click cell <b class="cell">B7</b> and type the following enteries pressing <b class="keyboard">TAB</b> after each:</li>
+					<p><b class="input">200</b></p>
+					<p><b class="input">0</b></p>
+					<p><b class="input">0</b></p>
+					<p><b class="input">10</b></p>
+					<p><b class="input">0</b></p>
+					<p><b class="input">0</b></p>
 				<li>In cell <b class="cell">B9</b> type: <b class="input">250</b>, then use the <b class="excel">fill</b> handle to copy the data to cells <b class="cell">C9:G9</b>.</li>
 				<li>In cell <b class="cell">B10</b> type: <b class="input">50</b>, then use the <b class="excel">fill handle</b> to copy the data to cells <b class="cell">C10:G10</b>.</li>
-				<li>In cell <b class="cell">B11</b> type: <b class="input">200</b>, then use the <b class="excel">fill handle</b> to copy the data to cells <b class="cell">C11:G11</b>.</li>
 				<li>In cell <b class="cell">B12</b> type: <b class="input">50</b>, then use the <b class="excel">fill handle</b> to copy the data to cells <b class="cell">C12:G12</b>.</li> 
 				<li>In cell <b class="cell">B8</b>, create a formula to find the sum of cells <b class="cell">B5:B7</b>.</li>
 				<li>Fill the formula across the cells to cell <b class="cell">G8</b>.</li>
