--- a/Projects/personal_budget_project.html
+++ b/Projects/personal_budget_project.html
@@ -52,7 +52,7 @@
 					<p><b class="input">10</b></p>
 					<p><b class="input">0</b></p>
 					<p><b class="input">0</b></p>
-				<li>In cell <b class="cell">B11</b> type: <b class="input">250</b>, then use the <b class="excel">fill</b> handle to copy the data to cells <b class="cell">C11:G11</b>.</li>
+				<li>In cell <b class="cell">B11</b> type: <b class="input">250</b>, then use the <b class="excel">fill handle</b> to copy the data to cells <b class="cell">C11:G11</b>.</li>
 				<li>In cell <b class="cell">B12</b> type: <b class="input">50</b>, then use the <b class="excel">fill handle</b> to copy the data to cells <b class="cell">C12:G12</b>.</li>
 				<li>In cell <b class="cell">B13</b> type: <b class="input">50</b>, then use the <b class="excel">fill handle</b> to copy the data to cells <b class="cell">C13:G13</b>.</li> 
 				<li>In cell <b class="cell">B8</b>, create a formula to find the sum of cells <b class="cell">B5:B7</b>.</li>
