--- a/Projects/movies_profits_presentation.html
+++ b/Projects/movies_profits_presentation.html
@@ -12,7 +12,7 @@
 		<ol>
 			<li>Create a new PowerPoint Presentation</li>
 			<li>On slide 1, in the title placeholder type: Movie Profits Presentation</li>
-			<li>On slide 2, in the subtitle placeholder type your name.</li>
+			<li>In the subtitle placeholder type your name.</li>
 			<li>Apply a theme to your presentation.</li>
 			<li>Add a new slide with the title and content layout.</li>
 			<li>In the title placeholder type: Weekend Profits</li>
